Ignore deprecattion warning

--- a/Transmon Measurement.ipynb
+++ b/Transmon Measurement.ipynb
@@ -24,6 +24,8 @@
     "u = unit(coerce_to_integer=True)\n",
     "from qm.qua import *\n",
     "from qm import QuantumMachinesManager\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) \n",
     "from qualang_tools.results import progress_counter, fetching_tool\n",
     "from qualang_tools.loops import from_array\n",
     "from progress import addjob, ProgressPlot, rescale\n",
