--- a/create_qm_qubit.ipynb
+++ b/create_qm_qubit.ipynb
@@ -7,14 +7,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'qm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mqm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QuantumMachinesManager\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'qm'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-28 13:38:31,936 - qm - INFO     - Starting session: 1bf5d615-ca74-413c-b987-ef18e0392b43\n"
      ]
     }
    ],
@@ -47,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "27ceefab-796b-4103-9a31-c8155b15d83f",
    "metadata": {},
    "outputs": [
@@ -55,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QM is ready with id qm-1690944172578\n"
+      "QM is ready with id qm-1695627174612\n"
      ]
     }
    ],
@@ -77,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "1109231f-955d-45de-bafd-6cfe141e8049",
    "metadata": {},
    "outputs": [
@@ -87,7 +83,7 @@
        "()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
