Modified Exercise file

--- a/Transmon Exercises.ipynb
+++ b/Transmon Exercises.ipynb
@@ -257,7 +257,7 @@
     "    with for_(n, 0, n < n_avg, n + 1):  # QUA for_ loop for averaging\n",
     "        with for_(*from_array(amplitude, amplitudes)): \n",
     "            # Play the qubit pulse with a variable duration (in clock cycles = 4ns)\n",
-    "            play(\"x180\"*amp(amplitude), \"qubit\") # <--- Modify to change the amplitude with the loop variable\n",
+    "            play(\"x180\"*amp(1.0), \"qubit\") # <--- Modify to change the amplitude with the loop variable\n",
     "            # Align the two elements to measure after playing the qubit pulse.\n",
     "            align(\"qubit\", \"resonator\")\n",
     "            # Measure the state of the resonator\n",
@@ -439,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
