New Transmon files

--- a/Transmon Exercises.ipynb
+++ b/Transmon Exercises.ipynb
@@ -381,10 +381,8 @@
     "\n",
     "    with for_(n, 0, n < n_avg, n + 1):  # QUA for_ loop for averaging\n",
     "        with for_(*from_array(t, durations)):  # QUA for_ loop for sweeping the waiting time\n",
-    "            # write the sequence    \n",
-    "            play(\"x180\"*amp(0.88),\"qubit\")\n",
-    "            align(\"qubit\",\"resonator\")\n",
-    "            wait(t)\n",
+    "            # Write the sequence\n",
+    "            # ....\n",
     "            # Measure the state of the resonator\n",
     "            measure(\n",
     "                \"readout\",\n",
@@ -458,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
