New measurement notebook

--- a/create_qm_qubit.ipynb
+++ b/create_qm_qubit.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-30 08:38:54,754 - qm - INFO     - Starting session: 5f0c5446-ac17-43ed-8350-2c2f70d9fedd\n"
+      "2025-10-01 18:29:59,756 - qm - INFO     - Starting session: 550f8d2d-f36e-4130-8ca1-271b424b28df\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "27ceefab-796b-4103-9a31-c8155b15d83f",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QM is ready with id qm-1695779081588\n"
+      "QM is ready with id qm-1695901731843\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "1109231f-955d-45de-bafd-6cfe141e8049",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "37a47e33-6f5d-4923-8c25-f8c12abc0394",
    "metadata": {
     "editable": true,
@@ -138,10 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calibrating resonator...\n",
-      "Done\n",
-      "Calibrating qubit...\n",
-      "Done\n"
+      "Calibrating resonator...\n"
      ]
     }
    ],
