--- a/index.ipynb
+++ b/index.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Transmon Notebooks\n",
+    "- [Measurement noise](Measurement%20Noise.ipynb)\n",
     "- [Transmon demo](Transmon%20Demo.ipynb)\n",
     "- [Exercises](Transmon%20Exercises.ipynb)"
    ]
