--- a/Measurement Noise.ipynb
+++ b/Measurement Noise.ipynb
@@ -91,7 +91,7 @@
    "id": "162222e8-a6d1-4207-bf45-b931a87bf8fb",
    "metadata": {},
    "source": [
-    "## No parametric amplifier"
+    "## Without parametric amplifier"
    ]
   },
   {
@@ -435,6 +435,83 @@
     "- Extract a random number sequence from the data\n",
     "- Is it biased? Why?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcfc3b28-63a5-486c-8622-564ec97179b1",
+   "metadata": {},
+   "source": [
+    "# Quantum Tomography"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "107f9e5b-7157-4468-bfef-efb16793d7b4",
+   "metadata": {},
+   "source": [
+    "- The qubit seems to be half the time in $|0\\rangle$ and half the time in $|1\\rangle$. But it should be in a well defined deterministic quantum state. How can we prove it?\n",
+    "- By adding pulses before the measurement, try to estimate the qubit quantum state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f47bcb02-8534-4497-9128-54275b1f4c2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters Definition\n",
+    "n_meas = 5000  \n",
+    "thermalization_time = 80 #in µs\n",
+    "\n",
+    "###################\n",
+    "# The QUA program #\n",
+    "###################\n",
+    "with program() as qmprog:\n",
+    "    n = declare(int)  \n",
+    "    I = declare(fixed)  \n",
+    "    Q = declare(fixed)  \n",
+    "    I_st = declare_stream()  # Stream for the 'I' quadrature\n",
+    "    Q_st = declare_stream()  # Stream for the 'Q' quadrature\n",
+    "\n",
+    "    with for_(n, 0, n < n_meas, n + 1):  # QUA for_ loop for averaging\n",
+    "        play(\"pi_half\",\"qubit\")\n",
+    "        measure(\n",
+    "            \"readout\",\n",
+    "            \"resonator\",\n",
+    "            dual_demod.full(\"cos\", \"sin\", I),\n",
+    "            dual_demod.full(\"minus_sin\", \"cos\", Q),\n",
+    "        )\n",
+    "        save(I, I_st)\n",
+    "        save(Q, Q_st)\n",
+    "        wait(thermalization_time*u.us)\n",
+    "\n",
+    "    with stream_processing():\n",
+    "        # Cast the data into a 1D vector, average the 1D vectors together and store the results on the OPX processor\n",
+    "        I_st.save_all(\"I\")\n",
+    "        Q_st.save_all(\"Q\")\n",
+    "\n",
+    "# Send the QUA program to the OPX, which compiles and executes it\n",
+    "job = addjob(qmprog, qm)\n",
+    "results = fetching_tool(job, data_list=[\"I\", \"Q\"])\n",
+    "I,Q=results.fetch_all()\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddca303d-6392-44d1-ad0e-a7fa33568dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = -292*np.pi/180\n",
+    "Ir =  I*np.cos(theta)-Q*np.sin(theta)\n",
+    "Ir *= 1e3\n",
+    "fig,ax=plt.subplots(figsize=(12,4))\n",
+    "ax.plot(Ir)\n",
+    "ax.plot(Ir>.8)"
+   ]
   }
  ],
  "metadata": {
@@ -453,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
