--- a/Transmon Exercises.ipynb
+++ b/Transmon Exercises.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib widget"
    ]
   },
   {
@@ -134,7 +134,7 @@
     "I, Q = results.fetch_all()\n",
     "\n",
     "# Create plot\n",
-    "theta = -292*np.pi/180\n",
+    "theta = -292*np.pi/180 # Found this morning\n",
     "Ir =  I*np.cos(theta)-Q*np.sin(theta)\n",
     "fig,ax = plt.subplots()\n",
     "ax.plot(4*durations, Ir*1e4)\n",
@@ -209,7 +209,7 @@
     "I, Q = results.fetch_all()\n",
     "\n",
     "# Create plot\n",
-    "theta = -292*np.pi/180\n",
+    "theta = -292*np.pi/180 # Found this morning\n",
     "Ir =  I*np.cos(theta)-Q*np.sin(theta)\n",
     "fig,ax = plt.subplots()\n",
     "ax.plot(amplitudes, Ir*1e4)\n",
@@ -286,7 +286,7 @@
     "I, Q = results.fetch_all()\n",
     "\n",
     "# Create plot\n",
-    "theta = -292*np.pi/180\n",
+    "theta = -292*np.pi/180 # Found this morning\n",
     "Ir =  I*np.cos(theta)-Q*np.sin(theta)\n",
     "fig,ax = plt.subplots()\n",
     "ax.plot(4*durations*1e-3, Ir*1e4)\n",
@@ -364,7 +364,7 @@
     "I, Q = results.fetch_all()\n",
     "\n",
     "# Create plot\n",
-    "theta = -292*np.pi/180\n",
+    "theta = -292*np.pi/180 # Found this morning\n",
     "Ir =  I*np.cos(theta)-Q*np.sin(theta)\n",
     "fig,ax = plt.subplots()\n",
     "ax.plot(4*durations*1e-3, Ir*1e4)\n",
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
